5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1675_2471.log
== TEST (2019-05-03 12:36:17) 
-- CODE:
from math import*
x = input("burrice do lukita: ").upper()
print(pi)
-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:36:53) 
-- CODE:
from math import*
x = input("burrice do lukita: ")
print(cos(45))
-- OUTPUT:
0.5253219888177297
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:37:17) 
-- CODE:
from math import*
x = input("burrice do lukita: ")
print(cos(45))
-- OUTPUT:
0.5253219888177297
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:37:49) 
-- CODE:
from math import*
x = input("burrice do lukita: ")
print(cos(rad(45))
-- ERROR:
File "XXXX", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:44:58) 
-- CODE:
x = float(input())
if(x==2):
	print("dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:45:17) 
-- CODE:
x = float(input())
if(x==2):
	print("dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:45:25) 
-- CODE:
x = float(input())
if(x==2):
	print("dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:50:34) 
-- CODE:
x = float(input())
if(x==2):
	print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:56:58) 
-- CODE:
y = input("y").upper()
x = float(input("x"))
if(x==2):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 12:57:24) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x==2):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:19) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 13:00:20) 
-- CODE:
y = input("y :").upper()
x = float(input("x :"))
if(x>2 and x<3):
	if(y=="M"):
		print("DOIS")
	else:
		print("dois")
elif(x==22):
	print("dois dois")
else:
	print("foda-se")
-- OUTPUT:
foda-se
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
